// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoUnfurlSettingConfirm message rendering works for any channel 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Links to \`integrations/snappydoo\` that you post in any channel of this workspace will automatically have a rich preview :white_check_mark:",
}
`;

exports[`AutoUnfurlSettingConfirm message rendering works for one channel 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Links to \`integrations/snappydoo\` that you post in this channel will automatically have a rich preview :white_check_mark:",
}
`;
